# QDSP-SLAM

./: .gitignore  CMakeLists.txt  README.md  build_thirdparty.sh  dsp_slam_rgbd  dsp_slam_rgbd.cc  package.xml
configs/: config_ICL_NUIM_home_2.json  config_replica_hotel0.json  config_ruihai_bedroom.json  config_ruihai_livingroom.json  config_self_allobject_ground.json  config_self_allobject_ground_kinectdk.json  ruihai_livingroom.yaml
include/: Frame.h  FrameDrawer.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapObject.h  MapPublisher.h  ObjectDetection.h  ObjectDrawer.h  Optimizer.h  System.h  Tracking.h  Viewer.h
include/ellipsoid-version/: BasicEllipsoidEdges.h  ConstrainPlane.h  Ellipsoid.h  Plane.h
include/utils/: dataprocess_utils.h
pybind11/tests/: test_builtin_casters.py
reconstruct/: __init__.py  contents.py  detector2d.py  mono_sequence.py  optimizer.py  visualize.py
scripts/: rgbd_viewer.sh  run_3dvp.sh  run_camera.sh  run_icl0.sh  run_icl1.sh  run_icl2.sh  run_replica_hotel0.sh  run_ruihai_bedroom.sh  run_ruihai_livingroom.sh  run_self_ground.sh  run_self_ground_10.sh  run_self_ground_9.sh
src/: Frame.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrame_ellipsoid.cc  LocalMapping.cc  LocalMapping_util.cc  LoopClosing_util.cc  MapDrawer.cc  MapObject.cc  MapPoint_util.cc  MapPublisher.cc  Map_ellipsoid.cc  ObjectDetection.cc  ObjectDrawer.cc  ObjectRenderer.cc  Optimizer_util.cc  System.cc  System_util.cc  Tracking.cc  Tracking_associate.cc  Tracking_ellipsoid.cc  Viewer.cc
src/Polygon/: Polygon.cpp  Polygon.hpp
src/Relationship/: CMakeLists.txt  Relationship.cpp  Relationship.h
src/dense_builder/: builder.cpp
src/ellipsoid-version/: BasicEllipsoidEdges.cpp  ConstrainPlane.cpp  DataAssociation.cpp  Ellipsoid.cpp  Geometry.cpp  Initializer.cpp  Plane.cpp  SemanticLabel.cpp  SupportingPlane.cpp
src/evo/: CMakeLists.txt  evo.cpp  evo.h
src/pca/: CMakeLists.txt  EllipsoidExtractor.cpp  EllipsoidExtractor.h  EllipsoidExtractorEdges.cpp  EllipsoidExtractorEdges.h  EllipsoidExtractorLocalOptimization.cpp  EllipsoidExtractorMultiPlanes.cpp
src/plane/: CMakeLists.txt  PlaneExtractor.cpp  PlaneExtractor.h  PlaneExtractorManhattan.cpp  PlaneExtractorManhattan.h  PlaneVertexEdges.h
src/rgbd_test/: rgbd_viewer  rgbd_viewer.cc
src/symmetry/: BorderExtractor.cpp  BorderExtractor.h  PointCloudFilter.cpp  PointCloudFilter.h  Symmetry.cpp  Symmetry.h  SymmetrySolver.cpp  SymmetrySolver.h
src/trajectory_align/: evo_ellipsoids_align.cpp
